--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,12 @@ insert_final_newline = true
 # Set default charset
 [*]
 charset = utf-8
+trim_trailing_whitespace = true
+indent_style = space
+indent_size = 2
 
 # Tab indentation (no size specified)
 indent_style = tab
+
+[*.php]
+indent_size = 4
